# bazel-testcontainers

./: .bazelrc  .gitignore  README.md  WORKSPACE  maven.bzl
src/main/java/com/mycompany/cache/: BUILD.bazel
src/test/java/: BUILD.bazel  RedisBackedCacheTest.java  RedisBackedCacheTest.txt
