java_library(
    name = "tests",
    srcs = glob(["*.java"]),
    deps = [
        "//src/main/java/com/mycompany/cache:lib",
        "@maven//:redis_clients_jedis",
        "@maven_test//:ch_qos_logback_logback_classic",
        "@maven_test//:junit_junit",
        "@maven_test//:org_rnorth_visible_assertions_visible_assertions",
        "@maven_test//:org_testcontainers_testcontainers",
    ],
)

java_test(
    name = "RedisBackedCacheTest",
    srcs = glob([
        "RedisBackedCacheTest.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        ":tests",
        "//src/main/java/com/mycompany/cache:lib",
        "@maven//:redis_clients_jedis",
        "@maven_test//:org_rnorth_visible_assertions_visible_assertions",
        "@maven_test//:org_testcontainers_testcontainers",
    ],
)
